Fix background image visibility with objectFit and zIndex

--- a/src/components/Landing/style.module.scss
+++ b/src/components/Landing/style.module.scss
@@ -1,12 +1,15 @@
 .landing {
   position: relative;
   display: flex;
+  width:  100%;
   height: 100vh;
   overflow: hidden;
 
-  img {
-    object-fit: cover;
-  }
+ :global(img) {
+  object-fit: cover;
+}
+
+
 
   .sliderContainer {
     position: absolute;
